@@ -1,3 +1,12 @@
+2005-12-05  Youchen Lee  <copyleft@utcr.org>
+
+	* src/mainframe.cpp: CMainFrame::OnNotebookPopupMenu, added "Add to
+	Favorites" item.
+
+	* po/pcmanx.pot,
+	po/zh_TW.po,
+	po/zh_CN.po: updated related po files.
+
 2005-12-05  Emfox Zhou  <emfoxzhou@gmail.com>
 	* src/core/termview.cpp,
 	src/core/termview.h,
